--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.1.1",
+    "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.522.0",
