--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.522.0",
     "next": "15.3.3",
     "react": "^19.0.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
